[package]
name = "todo-lib"
version = "2.0.0"
edition = "2021"

description = "A todo management library for Rust"
authors = ["Kyllingene"]
license = "MIT"

repository = "https://github.com/Kyllingene/todo-lib"
homepage = "https://github.com/Kyllingene/todo-lib"

[dependencies]
chrono = "0.4.31"
const_format = "0.2.31"

# [path.crates-io]
# iso = { version = "" }
